<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/movieFragment"
        android:icon="@drawable/ic_baseline_movie_24"
        android:title="@string/movie" />
    <item
        android:id="@+id/tvFragment"
        android:icon="@drawable/ic_baseline_tv_24"
        android:title="@string/tv_series" />

    <item
        android:id="@+id/favoritFragment"

        android:icon="@drawable/ic_baseline_favourite"
        android:title="@string/favourite" />
</menu>